--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CSS level 1</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-  <link rel="stylesheet" href="amazon.css">
+  <link rel="stylesheet" href="1.html/amazon.css">
 
 </head>
 <body>
